Mon Aug 12 11:11:08 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* Makefile (ourdevice.defs): Find device.defs under
	install_includedir now.
	
	* Makefile (all): No longer build uxboot by default.

Thu Aug  1 14:38:38 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* boot_script.h (safe_gets): Declare second parm as type `int'.
	* boot.c (safe_gets): Likewise.	

Sun Jul  7 21:10:08 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* boot.c (S_io_reauthenticate): Don't use unsafe MOVE_SEND in
 	auth_server_authenticate.

Fri May 10 16:11:49 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* boot.c (S_io_identity): Typo.

Fri May 10 09:18:53 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* boot.c (S_io_identity): New function.

Thu May  9 18:57:34 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* boot.c (S_io_select): No longer has TAG parm.
	
	* boot.c (S_io_reauthenticate): Use new interface.

Sun Apr 28 22:50:38 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* boot.c (main): Use select instead of SIGIO.

Mon Apr 15 12:57:29 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* Makefile (uxboot): Permit errors because people might not have
 	the a.out-mach3 target installed, and that's OK for many users.

	* Makefile (uxboot.0): Find frank1.ld in #(srcdir).

	* boot_script.h (safe_gets): Add decl.
	* boot_script.c: Include <stdio.h>.

Wed Apr  3 18:54:22 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* ux.c (printf): Add %d.

Wed Mar 27 11:30:29 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* boot.c [notanymore] (S_tioctl_tiocgeta, S_tioctl_tiocseta,
	S_tioctl_tiocsetaf, term_modes, term_ccs, term_speeds): 
	Functions & variables removed.
	* Makefile (COMMON-OBJS): Remove tcattr.o.
	(SRCS): Remove tcattr.c.

Thu Mar 14 10:10:20 1996  Roland McGrath  <roland@charlie-brown.gnu.ai.mit.edu>

	* Makefile (boot): Depend on libthreads.so, nothing wrong with shared
 	libs.