@@ -1,3 +1,8 @@
+Tue Aug 13 15:09:45 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>
+
+	* Makefile (ourdevice.defs): Depend on local device.defs.
+	(device.defs): New rule.
+
 Mon Aug 12 11:11:08 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>
 
 	* Makefile (ourdevice.defs): Find device.defs under
